--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,4 +22,4 @@ jobs:
         run: nix flake check
 
       - name: Check formatting
-        run: nix develop --no-update-lock-file --command treefmt -- . --fail-on-change --no-cache
+        run: nix develop --no-update-lock-file --command treefmt
