--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,9 @@ jobs:
       - name: Install nix
         uses: nixbuild/nix-quick-install-action@v22
         with:
-          nix_conf: experimental-features = nix-command flakes
+            nix_conf: |
+              experimental-features = nix-command flakes
+              access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
       - name: Run checks
         run: nix flake check
