chore: update packages

--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,8 @@
 #! /bin/sh
 
-
 source $(fetchurl https://raw.githubusercontent.com/paisano-nix/direnv/main/lib sha256-IgQhKK7UHL1AfCUntJO2KCaIDJQotRnK2qC4Daxk+wI=)
 
-export NIXPKGS_ALLOW_INSECURE=1
-export PRJ_DATA_DIR="$PRJ_DATA_HOME"
+# export NIXPKGS_ALLOW_INSECURE=1
+# export PRJ_DATA_DIR="$PRJ_DATA_HOME"
 
 use envreload //repo/shells/default //repo/config
