--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .std
+result
 
 # prj-spec dirs
 # <https://github.com/numtide/prj-spec>
@@ -13,3 +14,6 @@
 /lefthook.yml
 /.editorconfig
 /treefmt.toml
+
+# Added by cargo
+/target
