--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .std
 
 # Nix artifacts
-result
+result*
 
 # Added by cargo
 /target
@@ -29,3 +29,7 @@ graph.svg
 /lefthook.yml
 /.editorconfig
 /treefmt.toml
+
+# Apps 
+/sources/documentation/dist
+
