--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v20
+        with:
+          nix_path: nixpkgs=channel:nixos-unstable
+
+      - uses: cachix/cachix-action@v12
+        with:
+          name: cognitive-singularity
+          authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
+
       - name: Install nix
         uses: nixbuild/nix-quick-install-action@v22
         with:
