--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,18 +21,12 @@ jobs:
       - uses: cachix/install-nix-action@v20
         with:
           nix_path: nixpkgs=channel:nixos-unstable
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: cachix/cachix-action@v12
         with:
           name: cognitive-singularity
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-
-      - name: Install nix
-        uses: nixbuild/nix-quick-install-action@v22
-        with:
-            nix_conf: |
-              experimental-features = nix-command flakes
-              access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
       - name: Run checks
         run: nix flake check
